tests/errors/second_stage/operation/symbol_constant/symbol_constant.am
.define a = 2
mov a, r2
